crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__qualified_var_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "One.Two.whee\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (*
            (* ModuleName=>UpperIdent@0 DotModuleUpperIdent)
            DotIdent=>NoSpaceDotLowerIdent@2
        EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(ModuleUpperName("One", ".Two"), ".whee")

[=== formatted below ===]

