crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__requires_type_header_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "platform \"test/types\"\n    requires { Flags, Model } { main : App Flags Model }\n    exposes []\n    packages {}\n    imports []\n    provides [mainForHost]\n\n"
---
(BeginFile
    (BeginHeaderPlatform
        (BeginCollection Ident=>UpperIdent@4 Ident=>UpperIdent@6 EndCollection)
        (BeginCollection
            Ident=>LowerIdent@9
            (*
                TypeName=>UpperIdent@11
                (* TypeName=>UpperIdent@12 TypeName=>UpperIdent@13 EndTypeApply)
            EndTypeApply)
        EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection Ident=>LowerIdent@26 EndCollection)
    EndHeaderPlatform)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

