crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__simple_assign_decl.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "abc = def\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        Ident=>LowerIdent@2
    EndAssign)
EndTopLevelDecls)

[=== canfmt below ===]
Assign("abc", Ident("def"))

[=== formatted below ===]
abc = def
